Mit Colab erstellt

--- a/ak_API_examples.ipynb
+++ b/ak_API_examples.ipynb
@@ -92,31 +92,31 @@
         "#Authentication via email and password\n",
         "\n",
         "\n",
-        "#email=\"Email address of the user who is to make the API call (e.g. doctor or admin)\"\n",
-        "#password=\"Password of the account\""
+        "email=\"stefanie.schalitz+test1@arztkonsultation.de\"\n",
+        "password=\"stefanie.schalitz+test1@arztkonsultation.de\""
       ],
       "metadata": {
         "id": "XiIhu-zxOycz"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "byjmUm_89pYo",
-        "outputId": "06b7bad7-8bfc-4955-e067-bc748bc3c4e6"
+        "outputId": "a3be18e5-a533-4d7e-b094-4f0cf5c89c6f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "WqFHlbG78AJB"
       },
@@ -157,7 +157,7 @@
         "import requests\n",
         "\n",
         "#Change hostname!\n",
-        "hostname='app-sandbox.arztkonsultation.de'\n",
+        "hostname='video-steffi-test.arztkonsultation.de'\n",
         "\n",
         "def fetch(method, path, data=None, token=None):\n",
         "    url = f'https://{hostname}{path}'\n",
@@ -198,14 +198,14 @@
       "source": [
         "# Authentication via client ID and password\n",
         "\n",
-        "client_id = 'your_client_id'  # Replace this with your client ID\n",
-        "pw = 'your_password'           # Replace this with your password\n",
+        "client_id = \"113\" # Replace this with your client ID\n",
+        "pw = \"n3kLerxfJSmwvYP3HpoBfK2xG5THA&EY$#@uQw5AB@2SqT$@h!kSpkYhH$3s4M#HsUwx$5W9t4KsCgfMj\"         # Replace this with your password\n",
         "\n",
         "# @title\n",
         "import requests\n",
         "\n",
         "# Change Hostname!\n",
-        "hostname = 'app-sandbox.arztkonsultation.de'\n",
+        "hostname = 'video-steffi-test.arztkonsultation.de'\n",
         "\n",
         "def fetch(method, path, data=None, token=None):\n",
         "    url = f'https://{hostname}{path}'\n",
@@ -226,16 +226,30 @@
         "def login():\n",
         "    c = {'client_id': client_id, 'pw': pw}\n",
         "    result = fetch('POST', '/api/v2/client', c)\n",
-        "    return result['access_token']\n",
+        "    print(\"API Response:\", result)\n",
+        "    return result.get('access_token')\n",
         "\n",
         "token = login()\n",
         "print(\"Access Token:\", token)\n"
       ],
       "metadata": {
-        "id": "ZdqqNPa9fAsJ"
+        "id": "ZdqqNPa9fAsJ",
+        "outputId": "7030f22b-82dd-4692-ec5b-a6a06da687b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "API Response: {'token': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJhdWQiOiIxMTMiLCJqdGkiOiI0NzUxMDQ2ZDJiYjJhMzY1ZGJjMmQ1ZGM5NmZiNGFmM2EyYmRkZWU1YjdlZTI5MjRmNTE3ZWZiMGJmN2M4ZWE1MzhiZGU5MTllYmUzNTY5OCIsImlhdCI6MTczOTk3MDAwMC41OTgxNzMsIm5iZiI6MTczOTk3MDAwMC41OTgxNzYsImV4cCI6MTczOTk3MzYwMC41ODQ5MjYsInN1YiI6IiIsInNjb3BlcyI6WyIqIl0sInBlcm1pc3Npb24iOlsid2ViaG9va3MiXX0.pXtTfxEF4Pq_YkLcNhHr3W6vEsBhUWQS54KUbl8jOW86kWrWWQ5qiGzh5ZMaYhsbiHzuFld3lp7vyw-U7amJ9JTX8tbGcq9f7n1XKj8q6xU2zcrlLfMauuro0aGX5R9VEc7KbkERXtZDz8rkrEruOJdFWSWwYENHUkH--UGKj9y3Toz0PY-56YVqyE0z_cT8STJWbWfiGQ1OImdSOj6d_PJ9IYbvkp4kS2--k4N8tzoVsS61qf2jm4XH2FAXKJeajf7mUeTFCwNTNQMT6axypbmXQP1qNa7Tt2hIuNlIL4oflVMACXpvL8eSTg6DkBUQmV6d6b10NBCYjHOW50xj7JK66uTNOW_NEu7i_suxX5M20BycNr3SM_RHU4uhFGapTod1JzhMO3B0Ec9MwtdX346yiGXZqN2mnIDsazqwzA3EurvoUk-RX5zsWeCyas4G5M9fR8TK6lOesh_-sjfx37kghaOGlbe5G7UYZRmJH3KlCZKAiO3dZaIhbGjEgTF1SJT5yWIEgRiowZ-B1EUCxHPxGI_ww-gKKgkYmlL9ZeGPGYIU1U3CbnXNiQJpoG8PyhGXlEMDlOxOlHnk4Va8vdkC1BunISjqueuNxCpKpYmNogTJlfFM1wXXlFql2iiTWk9uUdbq21OyKjpo2sb_Px6NmgJIS5cTik6XW3-t4ZE', 'expires_in': 3600}\n",
+            "Access Token: Token not found in response\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -275,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "fDUQKXFyAUUQ"
       },
@@ -287,7 +301,6 @@
         "    user_data = {\n",
         "        \"name\": name,\n",
         "        \"email\": email,\n",
-        "        \"password\": pw,\n",
         "        \"company_id\": company_id,\n",
         "        \"roles\": [2],\n",
         "        \"notification_options\": [\n",
@@ -308,11 +321,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "lVU3e-6NAdb5"
+        "id": "lVU3e-6NAdb5",
+        "outputId": "db07f0d3-d883-41bd-a298-03dbfbf6e165",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "create_user() missing 1 required positional argument: 'pw'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-cf4c8045d5c6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_user\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Arzt ohne-pw\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"arzt5-ohne-pw@arztkonsultation.de\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: create_user() missing 1 required positional argument: 'pw'"
+          ]
+        }
+      ],
       "source": [
         "user=create_user(token, \"Arzt5 Code-Beispiele\", \"arzt5-ak-code-beispiele@arztkonsultation.de\", \"arzt5-ak-code-beispiele@arztkonsultation.de\")\n",
         "user"
@@ -937,100 +967,78 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
         "import requests\n",
         "import json\n",
         "import base64\n",
         "from datetime import datetime\n",
-        "from configparser import ConfigParser\n",
-        "from google.colab import drive\n",
         "\n",
-        "# Mount Google Drive\n",
-        "drive.mount(\"/content/drive\")\n",
+        "# Hardcoded credentials\n",
+        "email = \"arzt5@steffi-test.de\"  # Replace with your email\n",
+        "password = \"arzt5@steffi-test.de\"  # Replace with your password\n",
+        "client_id = \"113\"  # Replace with your client ID\n",
+        "client_pw = \"n3kLerxfJSmwvYP3HpoBfK2xG5THA&EY$#@uQw5AB@2SqT$@h!kSpkYhH$3s4M#HsUwx$5W9t4KsCgfMj\"  # Replace with your client password\n",
         "\n",
-        "# The path to the config.ini file\n",
-        "config_file_path = \"/content/drive/MyDrive/Colab Notebooks/config.ini\"\n",
-        "\n",
-        "# Ensure that the file exists\n",
-        "if not os.path.exists(config_file_path):\n",
-        "    raise FileNotFoundError(f\"The file {config_file_path} was not found\")\n",
-        "\n",
-        "# Initialise ConfigParser and read the file\n",
-        "config = ConfigParser()\n",
-        "config.read(config_file_path)\n",
-        "\n",
-        "# Print available sections for debugging\n",
-        "print(\"Available sections:\", config.sections())\n",
-        "\n",
-        "# Read access data without printing credentials\n",
-        "email = config[\"credentials\"][\"email\"]\n",
-        "password = config[\"credentials\"][\"password\"]\n",
-        "client_id = config[\"client_credentials\"][\"client_id\"]\n",
-        "client_pw = config[\"client_credentials\"][\"client_password\"]\n",
+        "# Hostname\n",
+        "hostname = \"video-steffi-test.arztkonsultation.de\"\n",
         "\n",
         "# Specific email for OTP generation\n",
-        "otp_email = \"arzt1-ak-code-beispiele@arztkonsultation.de\"\n",
+        "otp_email = \"arzt5@steffi-test.de\"\n",
         "\n",
         "def authenticate(email, password):\n",
-        "    url = \"https://app-sandbox.arztkonsultation.de/api/v2/auth\"\n",
-        "    data = {\n",
-        "        \"email\": email,\n",
-        "        \"password\": password\n",
-        "    }\n",
+        "    \"\"\"Authenticate via email and password to get a bearer token.\"\"\"\n",
+        "    url = f\"https://{hostname}/api/v2/auth\"\n",
+        "    data = {\"email\": email, \"password\": password}\n",
         "\n",
         "    response = requests.post(url, json=data)\n",
         "    try:\n",
-        "        response.raise_for_status()  # Raises an error for bad responses\n",
-        "        return response.json()['access_token']\n",
-        "    except KeyError:\n",
-        "        print(\"Error: 'access_token' key not found in the response.\")\n",
-        "        print(\"Response content:\", response.json())  # Print the full response for debugging\n",
-        "        raise  # Reraise the exception for further handling\n",
+        "        response.raise_for_status()\n",
+        "        return response.json().get('access_token', \"Token not found in response\")\n",
+        "    except requests.exceptions.HTTPError as e:\n",
+        "        print(f\"HTTP Error: {e.response.status_code}\")\n",
+        "        print(\"Response content:\", response.text)\n",
+        "        raise\n",
         "\n",
-        "def client_authenticate(client_id, client_pw):  # Updated variable name\n",
-        "    url = \"https://app-sandbox.arztkonsultation.de/api/v2/client\"\n",
-        "    data = {\n",
-        "        \"client_id\": client_id,\n",
-        "        \"pw\": client_pw\n",
-        "    }\n",
+        "def client_authenticate(client_id, client_pw):\n",
+        "    \"\"\"Authenticate via client credentials to get a token.\"\"\"\n",
+        "    url = f\"https://{hostname}/api/v2/client\"\n",
+        "    data = {\"client_id\": client_id, \"pw\": client_pw}\n",
         "\n",
         "    response = requests.post(url, json=data)\n",
         "    try:\n",
-        "        response.raise_for_status()  # Raises an error for bad responses\n",
-        "        return response.json()['token']  # Assuming the token is in this field\n",
-        "    except KeyError:\n",
-        "        print(\"Error: 'token' key not found in the response.\")\n",
-        "        print(\"Response content:\", response.json())  # Print the full response for debugging\n",
-        "        raise  # Reraise the exception for further handling\n",
-        "    except requests.HTTPError as e:\n",
-        "        print(\"HTTP Error:\", e.response.status_code)\n",
-        "        print(\"Response content:\", e.response.json())  # Print the full response for debugging\n",
-        "        raise  # Reraise the exception for further handling\n",
+        "        response.raise_for_status()\n",
+        "        return response.json().get('token', \"Client token not found in response\")\n",
+        "    except requests.exceptions.HTTPError as e:\n",
+        "        print(f\"HTTP Error: {e.response.status_code}\")\n",
+        "        print(\"Response content:\", response.text)\n",
+        "        raise\n",
         "\n",
         "def fetch(method, endpoint, data, token):\n",
+        "    \"\"\"Make an authenticated request.\"\"\"\n",
         "    headers = {\n",
         "        'Authorization': f'Bearer {token}',\n",
         "        'Content-Type': 'application/json'\n",
         "    }\n",
+        "    url = f\"https://{hostname}{endpoint}\"\n",
         "\n",
-        "    url = f\"https://app-sandbox.arztkonsultation.de{endpoint}\"\n",
         "    response = requests.request(method, url, headers=headers, json=data)\n",
-        "    response.raise_for_status()  # Raises an error for bad responses\n",
-        "    return response.json()\n",
+        "\n",
+        "    try:\n",
+        "        response.raise_for_status()\n",
+        "        return response.json()\n",
+        "    except requests.exceptions.HTTPError as e:\n",
+        "        print(f\"HTTP Error: {e.response.status_code}\")\n",
+        "        print(\"Response content:\", response.text)\n",
+        "        raise\n",
         "\n",
         "def create_call(token):\n",
+        "    \"\"\"Create a video call and generate an OTP-based video link.\"\"\"\n",
         "    call_data = {\n",
         "        \"duration\": 15,\n",
-        "        \"begin\": 1727884800,\n",
         "        \"tan_username\": \"TAN-User1\",\n",
         "        \"tan_email\": \"TAN-User1@arztkonsultation.de\",\n",
         "        \"tan_data_agreed\": True,\n",
         "        \"call_type\": \"tan\",\n",
-        "        \"additional_callees\": [\n",
-        "            {\n",
-        "                \"user_id\": 59288  # can be omitted if the account for the API call is the ak user who is also to join the call.\n",
-        "            }\n",
-        "        ]\n",
+        "        \"additional_callees\": [{\"user_id\": 80100}]\n",
         "    }\n",
         "\n",
         "    # Create the call\n",
@@ -1042,55 +1050,64 @@
         "    print('Call created successfully.')\n",
         "\n",
         "    participants = call['data']['users']\n",
-        "    print(\"\\nTeilnehmer:\")\n",
+        "    print(\"\\nParticipants:\")\n",
         "    for user in participants:\n",
-        "        print(f\"  - Name: {user['user_name']}, Rolle: {user['role_name']}, E-Mail: {user['email']}\")\n",
-        "\n",
+        "        print(f\"  - Name: {user['user_name']}, Role: {user['role_name']}, Email: {user['email']}\")\n",
         "        if user['role_name'] == 'tanuser':\n",
-        "            patient_url = f\"https://app-sandbox.arztkonsultation.de/video/{call_id}?tan={tan}\"\n",
-        "            print(f\"    - Link direkt ins Video für {user['user_name']}: {patient_url}\")\n",
-        "        elif user['role_name'] == 'callee':\n",
-        "            # Store participant details for OTP generation\n",
-        "            callee_user = user\n",
+        "            patient_url = f\"https://{hostname}/video/{call_id}?tan={tan}\"\n",
+        "            print(f\"    - Direct video link for {user['user_name']}: {patient_url}\")\n",
         "\n",
-        "    # Authenticate to the client API for OTP generation\n",
+        "    # Authenticate to client API for OTP\n",
+        "    client_auth_token = client_authenticate(client_id, client_pw)\n",
+        "\n",
         "    scoped_token_data = {\n",
-        "        \"email\": otp_email,  # Use the specific user's email here\n",
+        "        \"email\": otp_email,\n",
         "        \"scope_type\": \"call\",\n",
-        "        \"scope_id\": call_id  # Use the created call ID here\n",
+        "        \"scope_id\": call_id\n",
         "    }\n",
         "\n",
-        "    client_auth_token = client_authenticate(client_id, client_pw)  # Use Client ID and pw\n",
-        "    otp_response = fetch('POST', '/api/ext/createScopedToken', scoped_token_data, client_auth_token)  # Updated to correct endpoint\n",
+        "    otp_response = fetch('POST', '/api/ext/createScopedToken', scoped_token_data, client_auth_token)\n",
         "\n",
-        "    # Debugging: Print the complete response from the OTP API\n",
-        "    print(\"OTP API Response:\", otp_response)\n",
-        "\n",
-        "    # Check the structure of the response for the token\n",
-        "    if 'token' in otp_response:  # Adjusted to check for the token directly\n",
-        "        otp = otp_response['token']  # Assuming the token is returned in this field\n",
+        "    if 'token' in otp_response:\n",
+        "        otp = otp_response['token']\n",
         "    else:\n",
-        "        print(\"Error: Expected 'token' key not found in the response.\")\n",
+        "        print(\"Error: Expected 'token' key not found in response.\")\n",
         "        raise ValueError(\"Invalid response structure\")\n",
         "\n",
-        "    # Base64 encode the OTP\n",
         "    base64_otp = base64.b64encode(otp.encode()).decode()\n",
-        "\n",
-        "    # Construct the URL with the base64 encoded OTP\n",
-        "    video_url = f\"https://app-sandbox.arztkonsultation.de/video/{call_id}?tid={base64_otp}\"\n",
-        "    print(f\"  - Link mit OTP direkt ins Video für Arzt1 Code-Beispiele: {video_url}\")\n",
+        "    video_url = f\"https://{hostname}/video/{call_id}?tid={base64_otp}\"\n",
+        "    print(f\"  - OTP-based video link for Arzt5: {video_url}\")\n",
         "\n",
         "# Authenticate to get the Bearer token\n",
         "bearer_token = authenticate(email, password)\n",
         "\n",
-        "# Call the create_call function with the received Bearer token\n",
-        "create_call(bearer_token)\n"
+        "# Call the function to create a video call\n",
+        "create_call(bearer_token)"
       ],
       "metadata": {
-        "id": "N6TfawWVqoPk"
+        "id": "N6TfawWVqoPk",
+        "outputId": "ac10faee-46c0-48ce-cf1b-38101e237e39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Call created successfully.\n",
+            "\n",
+            "Participants:\n",
+            "  - Name: TAN-User1, Role: tanuser, Email: tan-user1@arztkonsultation.de\n",
+            "    - Direct video link for TAN-User1: https://video-steffi-test.arztkonsultation.de/video/62385?tan=Auv3-qRMS-LiyK\n",
+            "  - Name: Arzt5-Steffi, Role: callee, Email: arzt5@steffi-test.de\n",
+            "  - Name: Arzt5-Steffi, Role: caller, Email: arzt5@steffi-test.de\n",
+            "  - OTP-based video link for Arzt5: https://video-steffi-test.arztkonsultation.de/video/62385?tid=QURycXp0bmVOZlpUbHd5c1dvQXVqblZPZXJncWNHeWQyUnRqcElpbml4ak9sU2t5NWJ3TEpzbzlHV3NIT2dCeHhLenNXSlAyTjJYRzlRN0ZYTWtxMmxWREo5ZDRXY1NV\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1568,7 +1585,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1789,7 +1806,7 @@
         "id": "cspBBuSe8-Kg",
         "outputId": "5afcc986-f4cd-4dd0-aa8e-2d6635a7c2f3"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
