Mit Colab erstellt

--- a/ak_API_examples.ipynb
+++ b/ak_API_examples.ipynb
@@ -84,66 +84,8 @@
         "\n",
         "\n",
         "email=\"stefanie.schalitz+test1@arztkonsultation.de\"\n",
-        "password=\"stefanie.schalitz+test1@arztkonsultation.de\""
-      ],
-      "metadata": {
-        "id": "XiIhu-zxOycz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "byjmUm_89pYo",
-        "outputId": "a3be18e5-a533-4d7e-b094-4f0cf5c89c6f"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Authentication via config.ini\n",
-        "import os\n",
-        "from configparser import ConfigParser\n",
-        "from google.colab import drive\n",
+        "password=\"stefanie.schalitz+test1@arztkonsultation.de\"\n",
         "\n",
-        "# Mount Google Drive\n",
-        "drive.mount(\"/content/drive\")\n",
-        "\n",
-        "# The path to the config.ini file\n",
-        "config_file_path = \"/content/drive/MyDrive/Colab Notebooks/config.ini\"\n",
-        "\n",
-        "# Ensure that the file exists\n",
-        "if not os.path.exists(config_file_path):\n",
-        "    raise FileNotFoundError(f\"The file {config_file_path} was not found\")\n",
-        "\n",
-        "# Initialise ConfigParser and read the file\n",
-        "config = ConfigParser()\n",
-        "config.read(config_file_path)\n",
-        "\n",
-        "# Read access data\n",
-        "email = config[\"credentials\"][\"email\"]\n",
-        "password = config[\"credentials\"][\"password\"]\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WqFHlbG78AJB"
-      },
-      "outputs": [],
-      "source": [
         "# @title\n",
         "import requests\n",
         "\n",
@@ -172,7 +114,12 @@
         "    return result['access_token']\n",
         "\n",
         "token = login()\n"
-      ]
+      ],
+      "metadata": {
+        "id": "XiIhu-zxOycz"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -683,7 +630,7 @@
         "        \"call_type\": \"tan\",\n",
         "        \"additional_callees\": [\n",
         "            {\n",
-        "                \"user_id\": 59288 #can be omitted if the account for the API call is the ak user who is also to join the call.\n",
+        "                \"user_id\": 61261 #arzt1@steffi-test.de\n",
         "            }\n",
         "        ]\n",
         "    }\n",
