Mit Colab erstellt

--- a/ak_API_examples.ipynb
+++ b/ak_API_examples.ipynb
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "XiIhu-zxOycz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -889,14 +889,13 @@
       "source": [
         "## Auth via One-Time-Password (OTP)\n",
         "\n",
-        "This example creates a call and also creates a OTP for the ak user. The OTP is valid fdor only 60s and needs therefore be created everytime before the user wants to join the call. The OTP is added via a query paramter in the URL.\n",
+        "his code snippet handles the process of creating a video call and generating a one-time password (OTP) for secure access in the Arztkonsultation system.\n",
         "\n",
-        "The code performs the following tasks:\n",
-        "\n",
-        "- Authenticates the user using email and password to obtain a Bearer token.\n",
-        "- Creates a video call with specified participants and duration.\n",
-        "- Generates an OTP (One-Time Password) for a specific user after the call is created.\n",
-        "- Formats and displays participant information and links to join the video call, including a link for the user with OTP."
+        "\t1.\tClient Authentication: It first authenticates the client API to obtain a general access token.\n",
+        "\t2.\tUser Authentication: Then, it authenticates a specific user to get a user token.\n",
+        "\t3.\tCall Creation: Using the user token, it creates a new video consultation call.\n",
+        "\t4.\tScoped Token Generation: With the client token, it generates a scoped token (OTP) for accessing the call securely.\n",
+        "\t5.\tToken Encoding & URL Creation: The scoped token is Base64-encoded and embedded in a secure video call URL."
       ],
       "metadata": {
         "id": "-KeytSJpqitC"
@@ -905,122 +904,92 @@
     {
       "cell_type": "code",
       "source": [
+        "# Authentication via client ID and password\n",
+        "\n",
         "import requests\n",
-        "import json\n",
         "import base64\n",
-        "from datetime import datetime\n",
         "\n",
-        "# Hardcoded credentials\n",
-        "email = \"arzt5@steffi-test.de\"  # Replace with your email\n",
-        "password = \"arzt5@steffi-test.de\"  # Replace with your password\n",
-        "client_id = \"113\"  # Replace with your client ID\n",
-        "client_pw = \"n3kLerxfJSmwvYP3HpoBfK2xG5THA&EY$#@uQw5AB@2SqT$@h!kSpkYhH$3s4M#HsUwx$5W9t4KsCgfMj\"  # Replace with your client password\n",
+        "client_id = '113'  # Replace this with your client ID\n",
+        "pw = 'n3kLerxfJSmwvYP3HpoBfK2xG5THA&EY$#@uQw5AB@2SqT$@h!kSpkYhH$3s4M#HsUwx$5W9t4KsCgfMj'           # Replace this with your password\n",
         "\n",
-        "# Hostname\n",
-        "hostname = \"video-steffi-test.arztkonsultation.de\"\n",
+        "# Change Hostname!\n",
+        "hostname = 'video-steffi-test.arztkonsultation.de'\n",
         "\n",
-        "# Specific email for OTP generation\n",
-        "otp_email = \"arzt5@steffi-test.de\"\n",
-        "\n",
-        "def authenticate(email, password):\n",
-        "    \"\"\"Authenticate via email and password to get a bearer token.\"\"\"\n",
-        "    url = f\"https://{hostname}/api/v2/auth\"\n",
-        "    data = {\"email\": email, \"password\": password}\n",
-        "\n",
-        "    response = requests.post(url, json=data)\n",
-        "    try:\n",
-        "        response.raise_for_status()\n",
-        "        return response.json().get('access_token', \"Token not found in response\")\n",
-        "    except requests.exceptions.HTTPError as e:\n",
-        "        print(f\"HTTP Error: {e.response.status_code}\")\n",
-        "        print(\"Response content:\", response.text)\n",
-        "        raise\n",
-        "\n",
-        "def client_authenticate(client_id, client_pw):\n",
-        "    \"\"\"Authenticate via client credentials to get a token.\"\"\"\n",
-        "    url = f\"https://{hostname}/api/v2/client\"\n",
-        "    data = {\"client_id\": client_id, \"pw\": client_pw}\n",
-        "\n",
-        "    response = requests.post(url, json=data)\n",
-        "    try:\n",
-        "        response.raise_for_status()\n",
-        "        return response.json().get('token', \"Client token not found in response\")\n",
-        "    except requests.exceptions.HTTPError as e:\n",
-        "        print(f\"HTTP Error: {e.response.status_code}\")\n",
-        "        print(\"Response content:\", response.text)\n",
-        "        raise\n",
-        "\n",
-        "def fetch(method, endpoint, data, token):\n",
-        "    \"\"\"Make an authenticated request.\"\"\"\n",
+        "def fetch(method, path, data=None, token=None):\n",
+        "    url = f'https://{hostname}{path}'\n",
         "    headers = {\n",
-        "        'Authorization': f'Bearer {token}',\n",
-        "        'Content-Type': 'application/json'\n",
+        "        'Content-Type': 'application/json',\n",
+        "        'Accept': 'application/json'\n",
         "    }\n",
-        "    url = f\"https://{hostname}{endpoint}\"\n",
+        "    if token:\n",
+        "        headers['Authorization'] = f'Bearer {token}'\n",
         "\n",
-        "    response = requests.request(method, url, headers=headers, json=data)\n",
+        "    response = requests.request(method, url, json=data, headers=headers)\n",
         "\n",
-        "    try:\n",
-        "        response.raise_for_status()\n",
-        "        return response.json()\n",
-        "    except requests.exceptions.HTTPError as e:\n",
-        "        print(f\"HTTP Error: {e.response.status_code}\")\n",
-        "        print(\"Response content:\", response.text)\n",
-        "        raise\n",
+        "    if response.status_code >= 400:\n",
+        "        raise Exception(f'Request failed with status code {response.status_code}: {response.text}')\n",
         "\n",
+        "    return response.json()\n",
+        "\n",
+        "def login():\n",
+        "    c = {'client_id': client_id, 'pw': pw}\n",
+        "    result = fetch('POST', '/api/v2/client', c)\n",
+        "    return result['token']\n",
+        "\n",
+        "token = login()\n",
+        "print(\"Access Token:\", token)\n",
+        "\n",
+        "# Authenticate User\n",
+        "def authenticate_user(token, email):\n",
+        "    auth_data = {\"email\": email}\n",
+        "    result = fetch('POST', '/api/ext/authenticateUser', auth_data, token)\n",
+        "    return result[\"access_token\"]\n",
+        "\n",
+        "email = \"arzt1@steffi-test.de\"  # Replace with actual email\n",
+        "user_access_token = authenticate_user(token, email)\n",
+        "print(\"User Access Token:\", user_access_token)\n",
+        "\n",
+        "# Create Call\n",
         "def create_call(token):\n",
-        "    \"\"\"Create a video call and generate an OTP-based video link.\"\"\"\n",
         "    call_data = {\n",
         "        \"duration\": 15,\n",
-        "        \"tan_username\": \"TAN-User1\",\n",
-        "        \"tan_email\": \"TAN-User1@arztkonsultation.de\",\n",
+        "        \"tan_username\": \"TAN-User12\",\n",
+        "        \"tan_email\": email,\n",
         "        \"tan_data_agreed\": True,\n",
         "        \"call_type\": \"tan\",\n",
-        "        \"additional_callees\": [{\"user_id\": 80100}]\n",
+        "        \"additional_callees\": [\n",
+        "            {\n",
+        "                \"user_id\": 61261  # Can be omitted if the account for the API call is the AK user who is also to join the call.\n",
+        "            }\n",
+        "        ]\n",
         "    }\n",
+        "    result = fetch('POST', '/api/v2/calls', call_data, token)\n",
+        "    return result[\"data\"][\"id\"]  # Assuming the response contains a call ID\n",
         "\n",
-        "    # Create the call\n",
-        "    call = fetch('POST', '/api/v2/calls', call_data, token)\n",
+        "call_id = create_call(user_access_token)\n",
+        "print(\"Created Call ID:\", call_id)\n",
         "\n",
-        "    call_id = call['data']['id']\n",
-        "    tan = next(user['tan'] for user in call['data']['users'] if user['role_name'] == 'tanuser')\n",
-        "\n",
-        "    print('Call created successfully.')\n",
-        "\n",
-        "    participants = call['data']['users']\n",
-        "    print(\"\\nParticipants:\")\n",
-        "    for user in participants:\n",
-        "        print(f\"  - Name: {user['user_name']}, Role: {user['role_name']}, Email: {user['email']}\")\n",
-        "        if user['role_name'] == 'tanuser':\n",
-        "            patient_url = f\"https://{hostname}/video/{call_id}?tan={tan}\"\n",
-        "            print(f\"    - Direct video link for {user['user_name']}: {patient_url}\")\n",
-        "\n",
-        "    # Authenticate to client API for OTP\n",
-        "    client_auth_token = client_authenticate(client_id, client_pw)\n",
-        "\n",
-        "    scoped_token_data = {\n",
-        "        \"email\": otp_email,\n",
+        "# Generate Scoped Token\n",
+        "def create_scoped_token(token, email, call_id):\n",
+        "    scope_data = {\n",
+        "        \"email\": email,\n",
+        "        \"valid_for\": 60,\n",
         "        \"scope_type\": \"call\",\n",
         "        \"scope_id\": call_id\n",
         "    }\n",
+        "    result = fetch('POST', '/api/ext/createScopedToken', scope_data, token)\n",
+        "    return result[\"token\"]  # Assuming the response contains a token\n",
         "\n",
-        "    otp_response = fetch('POST', '/api/ext/createScopedToken', scoped_token_data, client_auth_token)\n",
+        "scoped_token = create_scoped_token(token, email, call_id)\n",
+        "print(\"Scoped Token:\", scoped_token)\n",
         "\n",
-        "    if 'token' in otp_response:\n",
-        "        otp = otp_response['token']\n",
-        "    else:\n",
-        "        print(\"Error: Expected 'token' key not found in response.\")\n",
-        "        raise ValueError(\"Invalid response structure\")\n",
+        "# Encode Scoped Token in Base64\n",
+        "encoded_scoped_token = base64.b64encode(scoped_token.encode()).decode()\n",
+        "print(\"Base64 Encoded Scoped Token:\", encoded_scoped_token)\n",
         "\n",
-        "    base64_otp = base64.b64encode(otp.encode()).decode()\n",
-        "    video_url = f\"https://{hostname}/video/{call_id}?tid={base64_otp}\"\n",
-        "    print(f\"  - OTP-based video link for Arzt5: {video_url}\")\n",
-        "\n",
-        "# Authenticate to get the Bearer token\n",
-        "bearer_token = authenticate(email, password)\n",
-        "\n",
-        "# Call the function to create a video call\n",
-        "create_call(bearer_token)"
+        "# Generate Video Call URL\n",
+        "video_call_url = f'https://{hostname}/video/{call_id}?tid={encoded_scoped_token}'\n",
+        "print(\"Video Call URL:\", video_call_url)\n"
       ],
       "metadata": {
         "id": "N6TfawWVqoPk",
