Mit Colab erstellt

--- a/ak_API_examples.ipynb
+++ b/ak_API_examples.ipynb
@@ -625,12 +625,11 @@
         "    call_data = {\n",
         "        \"duration\": 15,\n",
         "        \"tan_username\": \"TAN-User12\",\n",
-        "        \"tan_email\": \"TAN-User2@arztkonsultation.de\",\n",
-        "        \"tan_data_agreed\": True,\n",
-        "        \"call_type\": \"tan\",\n",
+        "        \"tan_email\": \"TAN-User2@arztkonsultation.de\", # only neccesary if the ak system should send an email notification\n",
+        "        \"call_type\": \"tan\", # mandatory\n",
         "        \"additional_callees\": [\n",
         "            {\n",
-        "                \"user_id\": 61261 #arzt1@steffi-test.de\n",
+        "                \"user_id\": 61261 # arzt1@steffi-test.de\n",
         "            }\n",
         "        ]\n",
         "    }\n",
@@ -697,9 +696,8 @@
         "        \"duration\": 15,\n",
         "        \"begin\": 1727884800,\n",
         "        \"tan_username\": \"TAN-User1\",\n",
-        "        \"tan_email\": \"TAN-User1@arztkonsultation.de\",\n",
-        "        \"tan_data_agreed\": True,\n",
-        "        \"call_type\": \"tan\",\n",
+        "        \"tan_email\": \"TAN-User1@arztkonsultation.de\", # only neccesary if the ak system should send an email notification\n",
+        "        \"call_type\": \"tan\", # mandatory\n",
         "        \"additional_callees\": [\n",
         "            {\n",
         "                \"name\": \"TAN2\",\n",
@@ -776,7 +774,7 @@
         "        \"duration\": 15,\n",
         "        \"begin\": 1727884800,\n",
         "        \"tan_username\": \"TAN-User1\",\n",
-        "        \"call_type\": \"tan\",\n",
+        "        \"call_type\": \"tan\", # mandatory, even there is only this call_type\n",
         "        \"additional_callees\": [\n",
         "            {\n",
         "                \"user_id\": 59288 #If necessary, only a user ID needs to be added if the account for the API call is the ak user who is also to join the call.\n",
@@ -840,7 +838,7 @@
         "    call_data = {\n",
         "        \"duration\": 15,\n",
         "        \"begin\": 1727884800,\n",
-        "        \"call_type\": \"tan\",\n",
+        "        \"call_type\": \"tan\", # mandatory, even there is only this call_type\n",
         "        \"additional_callees\": [\n",
         "            {\n",
         "                \"user_id\": 59288\n",
